complete q2 about average daily activity pattern

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -12,16 +12,53 @@ dataset <- load_data()
 ```{r}
 source("mean_total_steps_every_day.R")
 
-mean_total_steps <- display_histogram(dataset)
+total_steps_per_day <- get_total_steps_per_day(dataset)
+
+  ## draw the histogram
+  library(ggplot2)
+  ggplot(total_steps_per_day, aes(x=days, y=total_steps)) + 
+    geom_bar(stat='identity', width=1, aes(fill="red"), colour="#CC0000") + 
+    xlab("Days") +
+    ylab("Total steps") +
+    ggtitle("Total steps every day")
+
+mean_total_steps <- mean(total_steps_per_day$total_steps)
+median_total_steps <- median(total_steps_per_day$total_steps)
 ```
 **Mean total number of steps taken per day is:** 
 ```{r} 
 mean_total_steps 
 ```
+**Median total number of steps taken per day is:** 
+```{r} 
+median_total_steps 
+```
 
 ## What is the average daily activity pattern?
+```{r}
+source("time_series.R")
 
+mean_steps_per_interval <- get_mean_steps_per_interval(dataset)
 
+  # Create the time series plot
+  library(ggplot2)
+  ggplot(mean_steps_per_interval, aes(x=intervals, y=mean_steps)) + 
+    geom_line(colour="#0000CC") +
+    xlab("Intervals") +
+    ylab("Mean steps") +
+    ggtitle("Mean steps across all days for all 5-min intervals")
+
+max_interval <- find_max_interval(mean_steps_per_interval)
+```
+**Interval with the max mean steps is:** 
+```{r} 
+max_interval[1, "intervals"]
+```
+
+**It has recorded the following mean steps :** 
+```{r} 
+max_interval[1, "max_mean"]
+```
 
 ## Imputing missing values
 
